no bug - Import translations from android-l10n r=release a=l10n CLOSED TREE
UltraBlame original commit: 629d8c51c5a4f4d44be1aeb148acae3a47631268

--- a/mobile/android/android-components/components/browser/errorpages/src/main/res/values-nn-rNO/strings.xml
+++ b/mobile/android/android-components/components/browser/errorpages/src/main/res/values-nn-rNO/strings.xml
@@ -3192,6 +3192,65 @@ string
 -
 -
 The
+main
+body
+text
+of
+this
+error
+page
+.
+It
+will
+be
+shown
+beneath
+the
+title
+-
+-
+>
+<
+string
+name
+=
+"
+mozac_browser_errorpages_no_internet_message_2
+"
+>
+Pr
+v
+kople
+til
+p
+ei
+anna
+eining
+.
+Sjekk
+modemet
+eller
+ruteren
+.
+Kople
+fr
+og
+kople
+til
+Wi
+-
+fi
+igjen
+.
+<
+/
+string
+>
+<
+!
+-
+-
+The
 document
 title
 and
