--- a/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values-gd/strings.xml
@@ -53327,6 +53327,1609 @@ thugainn
 string
 >
 <
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_1
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Gl
+riaraichte
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_2
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Riaraichte
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_3
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Neodrach
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_4
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+M
+-
+riaraichte
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_5
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Gl
+mh
+-
+riaraichte
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_6
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cha
+chleachd
+mi
+e
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_7
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Cha
+d
+an
+mi
+lorg
+ann
+am
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Option
+for
+likert
+scale
+-
+-
+>
+<
+string
+name
+=
+"
+likert_scale_option_8
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Cha
+chleachd
+mi
+gleus
+an
+t
+-
+sioncronachaidh
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+printing
+microsurvey
+.
+"
+sec
+"
+It
+'
+s
+an
+abbreviation
+for
+"
+second
+"
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_printing_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Cuidich
+leinn
+a
+leasachadh
+cl
+-
+bhualadh
+ann
+am
+Firefox
+.
+Cha
+doir
+e
+ach
+mionaid
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+search
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Cuidich
+leinn
+a
+leasachadh
+gleus
+an
+luirg
+ann
+am
+Firefox
+.
+Cha
+doir
+e
+ach
+mionaid
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+prompt
+for
+sync
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_prompt_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+Cuidich
+leinn
+a
+leasachadh
+gleus
+an
+t
+-
+sioncronachaidh
+ann
+am
+Firefox
+.
+Cha
+doir
+e
+ach
+mionaid
+.
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+printing
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_survey_printing_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+D
+cho
+riaraichte
+s
+a
+tha
+thu
+leis
+a
+chl
+-
+bhualadh
+ann
+am
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+homepage
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_homepage_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+D
+cho
+riaraichte
+s
+a
+tha
+thu
+leis
+an
+duilleag
+-
+dhachaigh
+ann
+am
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+search
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_search_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+D
+cho
+riaraichte
+s
+a
+tha
+thu
+leis
+a
+ghleus
+luirg
+r
+ann
+am
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Text
+shown
+in
+the
+survey
+title
+for
+sync
+experience
+microsurvey
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_sync_title
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+UnusedResources
+"
+>
+D
+cho
+riaraichte
+s
+a
+tha
+thu
+le
+gleus
+an
+t
+-
+sioncronachaidh
+ann
+am
+Firefox
+?
+<
+/
+string
+>
+<
+!
+-
+-
+Accessibility
+-
+-
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+survey
+application
+icon
+.
+Note
+:
+The
+word
+"
+Firefox
+"
+should
+NOT
+be
+translated
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_app_icon_content_description
+"
+tools
+:
+ignore
+=
+"
+BrandUsage
+"
+>
+Suaicheantas
+Firefox
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+the
+survey
+feature
+icon
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_feature_icon_content_description
+"
+>
+omhaigheag
+a
+ghleus
+suirbhidh
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+closing
+microsurvey
+bottom
+sheet
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_close_handle_content_description
+"
+>
+D
+in
+an
+t
+-
+suirbhidh
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+"
+X
+"
+button
+that
+is
+closing
+microsurvey
+.
+-
+-
+>
+<
+string
+name
+=
+"
+microsurvey_close_button_content_description
+"
+>
+D
+in
+<
+/
+string
+>
+<
+!
+-
+-
+Debug
+drawer
+logins
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+Logins
+feature
+in
+the
+Debug
+Drawer
+.
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_logins_title
+"
+>
+Cl
+raidhean
+a
+-
+steach
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+logins
+section
+in
+the
+Logins
+feature
+where
+the
+parameter
+will
+be
+the
+site
+domain
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_logins_current_domain_label
+"
+>
+An
+rainn
+l
+ithreach
+:
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+The
+label
+for
+a
+button
+to
+add
+a
+new
+fake
+login
+for
+the
+current
+domain
+in
+the
+Logins
+feature
+.
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_logins_add_login_button
+"
+>
+Cuir
+cl
+radh
+a
+-
+steach
+fuadain
+ris
+dhan
+rainn
+seo
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+for
+delete
+button
+where
+parameter
+will
+be
+the
+username
+of
+the
+login
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_logins_delete_login_button_content_description
+"
+>
+Sguab
+s
+an
+cl
+radh
+a
+-
+steach
+aig
+an
+ainm
+-
+chleachdaiche
+%
+s
+<
+/
+string
+>
+<
+!
+-
+-
+Debug
+drawer
+"
+contextual
+feature
+recommendation
+"
+(
+CFR
+)
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+CFR
+Tools
+feature
+in
+the
+Debug
+Drawer
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_cfr_tools_title
+"
+>
+Innealan
+CFR
+<
+/
+string
+>
+<
+!
+-
+-
+The
+title
+of
+the
+reset
+CFR
+section
+in
+CFR
+Tools
+-
+-
+>
+<
+string
+name
+=
+"
+debug_drawer_cfr_tools_reset_cfr_title
+"
+>
+Ath
+-
+shuidhich
+na
+CFRs
+<
+/
+string
+>
+<
+!
+-
+-
+Glean
+debug
+tools
+-
+-
+>
+<
+!
+-
+-
+The
+title
+of
+the
+glean
+debugging
+feature
+-
+-
+>
+<
+string
+name
+=
+"
+glean_debug_tools_title
+"
+>
+Innealan
+d
+-
+bhugachadh
+Glean
+<
+/
+string
+>
+<
+!
+-
+-
+Messages
+explaining
+how
+to
+exit
+fullscreen
+mode
+-
+-
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Airson
+an
+l
+n
+-
+sgr
+n
+fh
+gail
+d
+an
+slaodadh
+a
+-
+nuas
+on
+bh
+rr
+is
+cleachd
+an
+l
+mh
+-
+ghluasaid
+air
+ais
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button
+"
+moz
+:
+removedIn
+=
+"
+132
+"
+tools
+:
+ignore
+=
+"
+UnusedResources
+"
+>
+Airson
+an
+l
+n
+-
+sgr
+n
+fh
+gail
+d
+an
+slaodadh
+a
+-
+nuas
+on
+bh
+rr
+is
+br
+th
+air
+ais
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+gesture
+navigation
+is
+enabled
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_gesture_short
+"
+>
+D
+an
+slaodadh
+a
+-
+nuas
+on
+bh
+rr
+cleachd
+an
+l
+mh
+-
+ghluasad
+air
+ais
+airson
+f
+gail
+<
+/
+string
+>
+<
+!
+-
+-
+Message
+shown
+to
+explain
+how
+to
+exit
+fullscreen
+mode
+when
+using
+back
+button
+navigation
+.
+-
+-
+>
+<
+!
+-
+-
+Localisation
+note
+:
+this
+text
+should
+be
+as
+short
+as
+possible
+max
+68
+chars
+-
+-
+>
+<
+string
+name
+=
+"
+exit_fullscreen_with_back_button_short
+"
+>
+D
+an
+slaodadh
+a
+-
+nuas
+on
+bh
+rr
+br
+th
+air
+ais
+airson
+f
+gail
+<
+/
+string
+>
+<
+!
+-
+-
+Beta
+Label
+Component
+!
+-
+-
+>
+<
+!
+-
+-
+Text
+shown
+as
+a
+label
+or
+tag
+to
+indicate
+a
+feature
+or
+area
+is
+still
+undergoing
+active
+development
+.
+Note
+that
+here
+"
+Beta
+"
+should
+not
+be
+translated
+as
+it
+is
+used
+as
+an
+icon
+styled
+element
+.
+-
+-
+>
+<
+string
+name
+=
+"
+beta_feature
+"
+>
+Beta
+<
+/
+string
+>
+<
 /
 resources
 >
