--- a/mobile/android/fenix/app/src/main/res/values/strings.xml
+++ b/mobile/android/fenix/app/src/main/res/values/strings.xml
@@ -5401,6 +5401,80 @@ etc
 .
 )
 for
+main
+menu
+help
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_content_description_help_button
+"
+>
+Help
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
+main
+menu
+settings
+button
+.
+-
+-
+>
+<
+string
+name
+=
+"
+browser_main_menu_content_description_settings_button
+"
+>
+Settings
+<
+/
+string
+>
+<
+!
+-
+-
+Content
+description
+(
+not
+visible
+for
+screen
+readers
+etc
+.
+)
+for
 bottom
 sheet
 handlebar
